2023-01-08 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx:
	  Amend claims concerning intrinsic address space support.

2023-01-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCast.c,
	  support/regression/tests/bug-3504.c:
	  Fix bug #3504.

2022-12-31 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCClabel.c (labelUnreach, deleteIfx),
	  src/SDCCcse.c (ifxOptimize): disable conditional flow change and
	  unreachable code warnings within function inlining
	* src/SDCClabel.c (labelJumptable,iCodeLabelOptimize),
	  src/SDCCcse.c (cseBBlock): optimize jump tables
	* src/SDCClabel.c (labelUnreach): clean up dead code def/use info

2022-12-24 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/cpp/gcc/configure.ac,
	  support/cpp/gcc/configure: disable some assembler and
	  target tests unneeded for the preprocessor

2022-12-16 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Fix bug #3500.
	* src/stm8/gen.c,
	  src/pdk/gen.c:
	  Fix bug #3515.

2022-12-15 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-941021-1.c:
	  Remove a test that apparently relies on implementation-defined floating-point rounding behaviour.

2022-12-14 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2567.c,
	  support/regression/tests/bug-2752.c:
	  Provide external declaration of inline function to pass test-host for non-inlining host compilers.
	* sdas/aspdk14/pdk14mch.c,
	  sdas/aspdk15/pdk15mch.c:
	  Fix bug #3376, patch by Free-PDK.

2022-12-13 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/sm83/divint.s,
	  support/regression/tests/muldiv.c.in,
	  support/regression/tests/onebyte.c.in:
	  Fix a % sm83 library issue, patch by Job Bolle.
	* src/stm8/main.c:
	  Fix __sdcc_external_startup handling for stm8 large memory model.
	* src/z80/peeph.def:
	  Fix bug #3528.

2022-12-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c,
	  support/regression/tests/bug-3522.c: